Header file added, varible name changed from rmdb to rmb

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,8 +1,8 @@
-.rmdb-home {
+.rmb-home {
   margin-bottom: 100px;
 }
 
-.rmdb-home-grid {
+.rmb-home-grid {
   max-width: 1280px;
   margin: 0 auto;
   padding: 0 20px;
