--- a/src/components/elements/Navigation/Navigation.css
+++ b/src/components/elements/Navigation/Navigation.css
@@ -1,4 +1,4 @@
-.rmdb-navigation {
+.rmb-navigation {
   width: 100%;
   height: 50px;
   background: #353535;
@@ -10,14 +10,14 @@
   padding-top: 10px;
 }
 
-.rmdb-navigation-content {
+.rmb-navigation-content {
   max-width: 1280px;
   margin: 0 auto;
   padding: 0 20px;
 
 }
 
-.rmdb-navigation-content p {
+.rmb-navigation-content p {
   font-family: 'Abel', sans-serif;
   font-size: 22px;
   float: left;
