--- a/src/components/Movie/Movie.css
+++ b/src/components/Movie/Movie.css
@@ -1,8 +1,8 @@
-.rmdb-movie {
+.rmb-movie {
   margin-bottom: 100px;
 }
 
-.rmdb-movie-grid {
+.rmb-movie-grid {
   max-width: 1280px;
   margin: 0 auto;
   padding: 0 20px;
