--- a/src/components/elements/Actor/Actor.css
+++ b/src/components/elements/Actor/Actor.css
@@ -1,15 +1,15 @@
-.rmdb-actor {
+.rmb-actor {
   box-sizing: border-box;
 }
 
-.rmdb-actor img {
+.rmb-actor img {
   width: 40%;
   height: auto;
   float: left;
   box-sizing: border-box;
 }
 
-.rmdb-actor-name {
+.rmb-actor-name {
   font-family: 'Abel', sans-serif;
   font-size: 22px;
   color:#fff;
@@ -19,7 +19,7 @@
   box-sizing: border-box;
 }
 
-.rmdb-actor-character {
+.rmb-actor-character {
   font-family: 'Abel', sans-serif;
   font-size: 18px;
   color:#fff;
