--- a/src/components/elements/FourColGrid/FourColGrid.css
+++ b/src/components/elements/FourColGrid/FourColGrid.css
@@ -1,14 +1,14 @@
-.rmdb-grid h1 {
+.rmb-grid h1 {
   font-family: 'Abel', sans-serif;
   font-size:42px;
 }
 
-.rmdb-grid-content {
+.rmb-grid-content {
   display: grid;
   grid-template-columns: auto auto auto auto;
 }
 
-.rmdb-grid-element {
+.rmb-grid-element {
   margin: 0 40px 40px 0;
   background: #353535;
   max-height: 430px;
@@ -26,20 +26,20 @@
 }
 
 /* For a 4-column grid */
-.rmdb-grid-element:nth-child(4n+4) {
+.rmb-grid-element:nth-child(4n+4) {
   margin-right: 0;
 }
 
 @media screen and (max-width: 720px) {
-  .rmdb-grid-content {
+  .rmb-grid-content {
     grid-template-columns: auto auto;
   }
 
-  .rmdb-grid-element:nth-child(2n+2) {
+  .rmb-grid-element:nth-child(2n+2) {
     margin-right: 0;
   }
 
-  .rmdb-grid h1 {
+  .rmb-grid h1 {
     font-size:22px;
   }
 }
