--- a/src/components/elements/Header/Header.css
+++ b/src/components/elements/Header/Header.css
@@ -1,4 +1,4 @@
-.rmdb-header {
+.rmb-header {
   width: 100%;
   height: auto;
   background: #1c1c1c;
@@ -6,7 +6,7 @@
   box-sizing: border-box;
 }
 
-.rmdb-header-content {
+.rmb-header-content {
   max-width: 1280px;
   min-height: 120px;
   height: auto;
@@ -16,31 +16,31 @@
   overflow: hidden;
 }
 
-.rmdb-logo {
+.rmb-logo {
   width: 300px;
   margin-top: 20px;
   float: left;
 }
 
-.rmdb-tmdb-logo {
+.rmb-tmdb-logo {
   width: 122px;
   margin-top: 25px;
   float: right;
 }
 
 @media screen and (max-width: 500px) {
-  .rmdb-header-content {
+  .rmb-header-content {
     max-width: 1280px;
     min-height: 0px;
   }
 
-  .rmdb-tmdb-logo {
+  .rmb-tmdb-logo {
     display: inline-block;
     width:80px;
     margin-top: 0px;
   }
 
-  .rmdb-logo {
+  .rmb-logo {
     width: 150px;
     margin-top: 5px;
   }
