--- a/src/components/elements/HeroImage/HeroImage.css
+++ b/src/components/elements/HeroImage/HeroImage.css
@@ -1,4 +1,4 @@
-.rmdb-heroimage {
+.rmb-heroimage {
   background-size: 100%, cover !important;
   background-position: center, center !important;
   width: 100%;
@@ -16,13 +16,13 @@
   }
 }
 
-.rmdb-heroimage-content {
+.rmb-heroimage-content {
   max-width: 1280px;
   padding: 20px;
   margin: 0 auto;
 }
 
-.rmdb-heroimage-text {
+.rmb-heroimage-text {
   z-index: 100;
   max-width: 700px;
   position: absolute;
@@ -33,13 +33,13 @@
   color: #fff;
 }
 
-.rmdb-heroimage-text h1 {
+.rmb-heroimage-text h1 {
   font-family: 'Abel', sans-serif;
   font-size:48px;
   color: #fff;
 }
 
-.rmdb-heroimage-text p {
+.rmb-heroimage-text p {
   font-family: 'Abel', sans-serif;
   font-size: 22px;
   line-height: 26px;
@@ -47,16 +47,16 @@
 }
 
 @media screen and (max-width: 720px) {
-  .rmdb-heroimage-text {
+  .rmb-heroimage-text {
     max-width: 100%;
   }
 
-  .rmdb-heroimage-text h1 {
+  .rmb-heroimage-text h1 {
     font-size: 38px;
     color: #fff;
   }
 
-  .rmdb-heroimage-text p {
+  .rmb-heroimage-text p {
     font-size: 16px;
     line-height: 20px;
     color: #fff;
