--- a/src/components/elements/LoadMoreBtn/LoadMoreBtn.css
+++ b/src/components/elements/LoadMoreBtn/LoadMoreBtn.css
@@ -1,4 +1,4 @@
-.rmdb-loadmorebtn {
+.rmb-loadmorebtn {
   background: #16d47b;
   width: 100%;
   min-height: 50px;
@@ -8,12 +8,12 @@
   transition: all 0.3s;
 }
 
-.rmdb-loadmorebtn p {
+.rmb-loadmorebtn p {
   font-family: 'Abel', sans-serif;
   font-size:42px;
   padding: 20px;
 }
 
-.rmdb-loadmorebtn:hover {
+.rmb-loadmorebtn:hover {
   opacity: 0.8;
 }
