--- a/src/components/elements/MovieInfo/MovieInfo.css
+++ b/src/components/elements/MovieInfo/MovieInfo.css
@@ -1,4 +1,4 @@
-.rmdb-movieinfo {
+.rmb-movieinfo {
   background-size: cover !important;
   background-position: center !important;
   width: 100%;
@@ -17,7 +17,7 @@
   }
 }
 
-.rmdb-movieinfo-content {
+.rmb-movieinfo-content {
   max-width: 1280px;
   width: 100%;
   height: 100%;
@@ -26,7 +26,7 @@
   position: relative;
 }
 
-.rmdb-movieinfo-thumb {
+.rmb-movieinfo-thumb {
   width: 350px;
   height: 100%;
   overflow: hidden;
@@ -34,7 +34,7 @@
   left: 0px;
 }
 
-.rmdb-movieinfo-text {
+.rmb-movieinfo-text {
   font-family: Arial, Helvetica, sans-serif;
   height: 100%;
   width: auto;
@@ -46,39 +46,39 @@
   left: 360px;
 }
 
-.rmdb-movieinfo-text h1 {
+.rmb-movieinfo-text h1 {
   font-family: 'Abel', sans-serif;
   font-size:48px;
   margin: 0;
 }
 
-.rmdb-movieinfo-text h3 {
+.rmb-movieinfo-text h3 {
   font-size: 16px;
   line-height: 0;
   margin-top: 30px;
 }
 
-.rmdb-movieinfo-text p {
+.rmb-movieinfo-text p {
   font-family: 'Abel', sans-serif;
   font-size: 18px;
   line-height: 26px;
 }
 
-.rmdb-rating {
+.rmb-rating {
   width: 250px;
   height: 20px;
   margin-top: 20px;
   position: relative;
 }
 
-.rmdb-score {
+.rmb-score {
   position: absolute;
   margin: 0;
   right: 0px;
   top: -3px;
 }
 
-.rmdb-director {
+.rmb-director {
   margin: 0;
 }
 
