--- a/src/components/elements/SearchBar/SearchBar.css
+++ b/src/components/elements/SearchBar/SearchBar.css
@@ -1,4 +1,4 @@
-.rmdb-searchbar {
+.rmb-searchbar {
   width: 100%;
   height: 105px;
   background: #1c1c1c;
@@ -8,7 +8,7 @@
   color: #fff;
 }
 
-.rmdb-searchbar-content {
+.rmb-searchbar-content {
   max-width: 1280px;
   width: 100%;
   height: 55px;
@@ -19,14 +19,14 @@
   color: #fff;
 }
 
-.rmdb-fa-search {
+.rmb-fa-search {
   position: absolute;
   left: 20px;
   top: 12px;
   color: #fff;
 }
 
-.rmdb-searchbar-input {
+.rmb-searchbar-input {
   font-family: 'Abel', sans-serif;
   font-size: 38px;
   position: absolute;
@@ -38,12 +38,12 @@
   color: #fff;
 }
 
-.rmdb-searchbar-input:focus {
+.rmb-searchbar-input:focus {
   outline: none;
 }
 
 @media screen and (max-width: 720px) {
-  .rmdb-searchbar-input {
+  .rmb-searchbar-input {
     font-size: 28px;
     color: #fff;
   }
